[package]
name = "hashsum"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "CLI to print or verify cryptographic checksums (md5, sha1, sha2, belt-hash)."
repository = "https://github.com/makavity/hashsum/tree/main"

[dependencies]
clap = { version = "4", features = ["derive"] }
digest = "0.10"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
belt-hash = "0.1"

[[bin]]
name = "hashsum"
path = "src/main.rs"